Bug 187810 - In import window images are sorted in reverse order but folders are not
Summary: In import window images are sorted in reverse order but folders are not
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Import-Sort (other bugs)
Version First Reported In: 0.10.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-21 19:31 UTC by Matti Kettunen
Modified: 2017-08-18 06:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matti Kettunen 2009-03-21 19:31:35 UTC
Version:           0.10.0 (using KDE 4.2.1)
OS:                Linux
Installed from:    SuSE RPMs

My digital camera sorts pictures in different folders so that there are max 100 pictures in the folder. When importing images digikam shows each folder's images in reverse order but checks folders in "normal" order. 

That causes images to be shown in this kind of order: 
img_3001.jpg, img_3000.jpg, img_3199.jpg, img_3198.jpg....img_3100.jpg, img_3299.jpg, img_3298.jpg, etc. etc.
Comment 1 caulier.gilles 2009-05-13 12:57:29 UTC
Camera gui is a flat list. It parse all folder content and sort items by date in reverse order : from more recent to older. There is no consideration about to play with folder creation date here...

Gilles Caulier
Comment 2 Matti Kettunen 2009-05-13 20:10:03 UTC
> It parse all folder content and sort items by date
> in reverse order : from more recent to older. There is no consideration about
> to play with folder creation date here...

Well... How is it possible that I see images in this kind of order:
img_4184.jpg (04/16/2009 6:57PM in folder "DCIM/141CANON")
img_4181.jpg (04/16/2009 6:58PM in folder "DCIM/141CANON")
img_4220.jpg (04/29/2009 5:35PM in folder "DCIM/142CANON")
img_4219.jpg (04/29/2009 5:36PM in folder "DCIM/142CANON")

Folder 141CANON is created before 142CANON. So in reverse order they should be 142CANON first, 142CANON second. 

Everything is fine if all photos are in one folder.
Comment 3 caulier.gilles 2009-05-13 20:42:08 UTC
Well, normally, Exif creation date is used to sort all items from all dir. We don't care about folder creation date.

It don't work if you use a camera drivers which is not able to provide Exif info from camera item and give file date... If camera and drivers work fine file creation date and Exif creation date must be the same (in theory)

...or i missing something ?

Gilles Caulier
Comment 4 Matti Kettunen 2009-05-13 20:56:49 UTC
Those dates are from Exif-data (I just checked). Photos are in same order if I use memory card reader ( -> not camera driver problem?). 

May be I should make a fresh install of KDE :) I have updated it so many times that problem might be somewhere else...
Comment 5 Marcel Wiesweg 2009-07-20 19:56:26 UTC
SVN commit 1000020 by mwiesweg:

Take already loaded items into account when sorting by date.

BUG: 187810

 M  +4 -1      NEWS  
 M  +15 -0     utilities/cameragui/cameraui.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1000020