Take already loaded items into account when sorting by date.

BUG: 187810

svn path=/trunk/extragear/graphics/digikam/; revision=1000020