utilities/cameragui/cameraui.cpp
@@ -1107,6 +1107,14 @@ void CameraUI::slotFileList(const GPItemInfoList& fileList)
     QStringList list = settings->getAllFileFilter().toLower().split(' ');
 
     QMultiMap<QDateTime, GPItemInfo> map;
+    CameraIconItem *citem = dynamic_cast<CameraIconItem*>(d->view->firstItem());
+    while(citem)
+    {
+        info.setFile(citem->itemInfo()->name);
+        map.insertMulti(citem->itemInfo()->mtime, *citem->itemInfo());
+        citem = dynamic_cast<CameraIconItem*>(citem->nextItem());
+    }
+
     foreach(const GPItemInfo& item, fileList)
     {
         info.setFile(item.name);
@@ -1116,6 +1124,13 @@ void CameraUI::slotFileList(const GPItemInfoList& fileList)
         {
             map.insertMulti(item.mtime, item);
         }
+    }
+
+    citem = dynamic_cast<CameraIconItem*>(d->view->firstItem());
+    while(citem)
+    {
+        d->view->removeItem(citem->itemInfo()->folder,citem->itemInfo()->name);
+        citem = dynamic_cast<CameraIconItem*>(citem->nextItem());
     }
 
     refreshIconView(map);
